[gd_scene load_steps=4 format=3 uid="uid://dmcb5d8o0ctte"]

[ext_resource type="Script" path="res://script/UI/piece_detail.gd" id="1_bogq2"]
[ext_resource type="Texture2D" uid="uid://oeaknkmvxh4s" path="res://img/piece/standerd/white_cube.png" id="1_mtc4j"]
[ext_resource type="PackedScene" uid="uid://dro1g6xf0nis0" path="res://scenes/UI/piece_state.tscn" id="3_aeso3"]

[node name="piece_detail" type="Control"]
custom_minimum_size = Vector2(240, 300)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_bogq2")

[node name="background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 240.0
offset_bottom = 300.0
color = Color(0.169245, 0.169245, 0.169245, 1)

[node name="lbl_piece_name" type="RichTextLabel" parent="."]
layout_mode = 0
offset_top = 10.0
offset_right = 240.0
offset_bottom = 40.0
bbcode_enabled = true
text = "Name"

[node name="piece_icon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 72.0
offset_top = 30.0
offset_right = 168.0
offset_bottom = 126.0
texture = ExtResource("1_mtc4j")

[node name="lbl_piece_description" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 230.0
offset_right = 220.0
offset_bottom = 290.0
bbcode_enabled = true
text = "description"

[node name="max_health_state" parent="." instance=ExtResource("3_aeso3")]
position = Vector2(30, 160)

[node name="score_state" parent="." instance=ExtResource("3_aeso3")]
position = Vector2(130, 160)

[node name="attack_state" parent="." instance=ExtResource("3_aeso3")]
position = Vector2(30, 195)

[node name="pattern_state" parent="." instance=ExtResource("3_aeso3")]
position = Vector2(130, 195)
